--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "string",
     "slice",
     "sliceWith",
-    "sliceWithGenerator"
+    "sliceWithGenerator",
     "slicer",
     "split",
     "splitter",
