--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "ava tests.js",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "postinstall": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
+    "compile": "node_modules/babel-cli/bin/babel.js src --out-dir lib"
   },
   "engines": {
     "node": ">=6"
@@ -36,7 +38,12 @@
   },
   "homepage": "https://github.com/sseppola/slice-foo#readme",
   "devDependencies": {
-    "ava": "^0.16.0"
+    "ava": "^0.16.0",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-runtime": "^6.11.6"
   },
   "dependencies": {
     "lodash.curry": "^4.1.1"
