--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compile": "node_modules/babel-cli/bin/babel.js src --out-dir lib"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=0.12"
   },
   "repository": {
     "type": "git",
@@ -42,10 +42,10 @@
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-runtime": "^6.11.6"
+    "babel-preset-es2015": "^6.14.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "lodash.curry": "^4.1.1"
   }
 }
